<resources>
    <string name="app_name">GeodezijaVodic</string>
    <string name="title_home">Domov</string>
    <string name="title_dashboard">Slucaji</string>
    <string name="title_notifications">Obvestila</string>
    <string name="textview">Aplikacija</string>
    <string name="button">Button</string>
    <string name="ureditev_meje">Ureditev meje</string>
    <string name="parcelacija" />
    <string name="izberi_geodetski_postopek">Izberi geodetski postopek:</string>
    <string name="ta_aplikacija_je_namenjena_vsem_geodetom_za_vodenje_geodetskega_postopka">Ta aplikacija je namenjena vsem geodetom, za vodenje geodetskega postopka</string>
    <string name="geodetski_vodic">Geodetski vodic</string>
    <string name="ta_aplikacija_je_namenjena_vsem_geodetom_za_pomo_pri_opravljanju_geodetskega_postopka">Ta aplikacija je namenjena vsem geodetom za pomoč pri opravljanju geodetskega postopka.</string>
    <string name="izravnava_meje">Izravnava meje</string>
    <string name="parcelacija2">parcelacija</string>
    <string name="geodetski_nacrt">geodetski nacrt</string>
    <string name="katasterski_vpis">katasterski vpis</string>
    <string name="geodetski_vodi">Geodetski vodič</string>
    <string name="todo">TODO</string>
    <string name="geodetske_meritve_so_osnova_za_ureditev_meje_v_postopku_urejanja_meje_se_ureja_meja_ali_del_meje_parcele_del_meje_parcele_je_ena_ali_ve_daljic_ki_omejujejo_parcelo_a_niso_povezane_v_zaklju_en_poligon_kraji_a_daljic_so_zemlji_kokatastrske_to_ke_del_meje_parcele_razmejuje_zemlji_e_parcele_od_zemlji_a_ene_ali_ve_sosednjih_parcel">Geodetske meritve so osnova za ureditev meje. V postopku urejanja meje se ureja meja ali del meje parcele. Del meje parcele je ena ali več daljic, ki omejujejo parcelo, a niso povezane v zaključen poligon. Krajišča daljic so zemljiškokatastrske točke. Del meje parcele razmejuje zemljišče parcele od zemljišča ene ali več sosednjih parcel.</string>
    <string name="pribli_ni_izra_un_stro_kov_geodetskega_postopka_ureditve_meje">Približni izračun stroškov geodetskega postopka ureditve meje:</string>
    <string name="VnesiSteviloTock">TextView</string>
    <string name="vnesi_tevilo_lastnikov">Vnesi število lastnikov:</string>
    <string name="pog">TextView</string>
    <string name="izracun">TextView</string>
    <string name="pribli_na_cena_geodetske_storitve_je">Približna cena geodetske storitve je:</string>
    <string name="pozeni">Button</string>
    <string name="izracunaj">Izračunaj</string>
    <string name="vnesi_tevilo_mejnih_to_k">Vnesi število mejnih točk:</string>
    <string name="vnesi_tevilo_mejnih_parcel">Vnesi število mejnih parcel:</string>
    <string name="RezultatText">Rezultat</string>
    <string name="geodetski_na_rt_je_prikaz_dejanskega_stanja_terena_ter_mora_vsebovati_najmanj_podatke_o_reliefu_vodah_stavbah_gradbenih_in_enirskih_objektih_rabi_zemlji_rastlinstvu_ter_podatke_o_zemlji_kih_parcelah_izdeluje_se_ga_za_razli_ne_namene_pridobitve_gradbene_dokumentacije_tehni_ni_pregledi_posnetek_izvedenega_stanja">Geodetski načrt je prikaz dejanskega stanja terena ter mora vsebovati najmanj podatke o reliefu, vodah, stavbah, gradbenih inženirskih objektih, rabi zemljišč, rastlinstvu ter podatke o zemljiških parcelah.Izdeluje se ga za različne namene (pridobitve gradbene dokumentacije, tehnični pregledi, posnetek izvedenega stanja, …).</string>
    <string name="izracunajGN">Izračunaj</string>
    <string name="pribli_ni_izra_un_stro_kov_izdelave_geodetskega_na_rta">Približni izračun stroškov izdelave geodetskega načrta:</string>
    <string name="vnesi_pribli_no_velikost_obmo_ja_v_m2">Vnesi približno velikost območja v m2</string>
    <string name="RezultatGN">Rezultat</string>
    <string name="pribli_na_vrednost_geodetske_storitve_jeGN">Približna vrednost geodetske storitve je:</string>
    <string name="po_kon_ani_gradnji_je_potrebno_stavbo_evidentirati_v_zemlji_ki_kataster_in_v_kataster_stavb_stavbo_mora_geodet_izmeriti_zunaj_da_ji_dolo_i_koordinate_v_dr_avnem_koordinatnem_sistemu_in_znotraj_da_dolo_i_bruto_tlorisno_povr_ino_in_uporabno_povr_ino_stavbe_stavba_tako_pridobi_identifikacijsko_tevilko_prav_tako_pa_se_identifikacijske_tevilke_dodelijo_tudi_vsem_delom_stavbe">Po končani gradnji je potrebno stavbo evidentirati v zemljiški kataster in v kataster stavb. Stavbo mora geodet izmeriti zunaj, da ji določi koordinate v državnem koordinatnem sistemu in znotraj, da določi bruto tlorisno površino in uporabno površino stavbe. Stavba tako pridobi identifikacijsko številko, prav tako pa se identifikacijske številke dodelijo tudi vsem delom stavbe.</string>
    <string name="pribli_ni_izra_un_stro_kov_geodetskega_postopka_katasterskega_vpisa">Približni izračun stroškov geodetskega postopka katasterskega vpisa:</string>
    <string name="vnesi_pribli_no_povr_ino_stavbe">Vnesi približno površino stavbe:</string>
    <string name="vnesi_tevilo_prostorov_v_stavbi">Vnesi število prostorov v stavbi:</string>
    <string name="pribli_na_cena_geodetske_storitve_jeKS">Približna cena geodetske storitve je:</string>
    <string name="izra_unajKS">Izračunaj</string>
    <string name="rezultatKS">Rezultat</string>
    <string name="zakoli_ba_stavb">Zakoličba stavb</string>
    <string name="zakoli_ba_je_prenost_pomembnih_to_k_na_rta_v_naravo_v_postopku_zakoli_be_se_na_terenu_zakoli_i_oz_ustrezno_ozna_i_lokacijo_objekta_v_skladu_s_pogoji_dolo_enimi_v_gradbenem_dovoljenju_in_projektu_za_pridobitev_gradbenega_dovoljenja">Zakoličba je prenost pomembnih točk načrta v naravo. V postopku zakoličbe se na terenu zakoliči oz. ustrezno označi lokacijo objekta v skladu s pogoji določenimi v gradbenem dovoljenju in projektu za pridobitev gradbenega dovoljenja.</string>
    <string name="pribli_ni_izra_un_stro_kov_geodetske_storitve_zakoli_ba_stavbe">Približni izračun stroškov geodetske storitve zakoličba stavbe:</string>
    <string name="vnesi_tevilo_zakoli_enih_to_k">Vnesi število zakoličenih točk:</string>
    <string name="izra_unajZS">Izračunaj</string>
    <string name="rezultatZS">Rezultat</string>
</resources>
