<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:layout_marginTop="44dp"
        android:text="@string/vnesi_tevilo_lastnikov"
        app:layout_constraintEnd_toStartOf="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMejneTocke"
        tools:text="Vnesi število lastnikov:" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="69dp"
        android:layout_height="40dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textUreditevMeje"
        android:layout_width="347dp"
        android:layout_height="178dp"
        android:layout_marginTop="16dp"
        android:text="@string/geodetske_meritve_so_osnova_za_ureditev_meje_v_postopku_urejanja_meje_se_ureja_meja_ali_del_meje_parcele_del_meje_parcele_je_ena_ali_ve_daljic_ki_omejujejo_parcelo_a_niso_povezane_v_zaklju_en_poligon_kraji_a_daljic_so_zemlji_kokatastrske_to_ke_del_meje_parcele_razmejuje_zemlji_e_parcele_od_zemlji_a_ene_ali_ve_sosednjih_parcel"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" /><![CDATA[




        app:layout_constraintEnd_toStartOf=@+id/editText3"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="Vnesi število točk" />



















    ]]>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="346dp"
        android:layout_height="41dp"
        android:text="@string/pribli_ni_izra_un_stro_kov_geodetskega_postopka_ureditve_meje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUreditevMeje" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="69dp"
        android:layout_height="40dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="69dp"
        android:layout_height="40dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="311dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/pribli_na_cena_geodetske_storitve_je"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/Izracun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RezultatText"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.177" />

    <Button
        android:id="@+id/pozeni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/izracunaj"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textMejneTocke"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:text="@string/vnesi_tevilo_mejnih_to_k"
        app:layout_constraintEnd_toStartOf="@+id/editText3"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/TextParcele"
        android:layout_width="173dp"
        android:layout_height="39dp"
        android:text="@string/vnesi_tevilo_mejnih_parcel"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/editText4"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMejneTocke"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>